@@ -1,6 +1,7 @@
 OpenLDAP 2.2 Change Log
 
 OpenLDAP 2.2.27 Engineering
+	Fixed ACL val default style parsing crasher (ITS#3700)
 
 OpenLDAP 2.2.26 Release
 	Fixed back-bdb ldapadd ctxcsn crash (ITS#3685)
